Añadido sporte para interrupción de GPIO para sensor. Añadido cuerpo de librerías. Pasado proyecto principal a C++.

--- a/STM32_IAS_Project/STM32_IAS_Project.ioc
+++ b/STM32_IAS_Project/STM32_IAS_Project.ioc
@@ -61,6 +61,7 @@ Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_TX.1.Priority=DMA_PRIORITY_HIGH
 Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
 I2C1.Timing=0x10909CEC
 KeepUserPlacement=false
@@ -81,31 +82,34 @@ Mcu.Name=STM32L432K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
 Mcu.Pin1=PC15-OSC32_OUT (PC15)
-Mcu.Pin10=PA13 (JTMS-SWDIO)
-Mcu.Pin11=PA14 (JTCK-SWCLK)
-Mcu.Pin12=PA15 (JTDI)
-Mcu.Pin13=PB3 (JTDO-TRACESWO)
-Mcu.Pin14=VP_RTC_VS_RTC_Activate
-Mcu.Pin15=VP_RTC_VS_RTC_Calendar
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM15_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13 (JTMS-SWDIO)
+Mcu.Pin12=PA14 (JTCK-SWCLK)
+Mcu.Pin13=PA15 (JTDI)
+Mcu.Pin14=PB3 (JTDO-TRACESWO)
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_RTC_VS_RTC_Activate
+Mcu.Pin17=VP_RTC_VS_RTC_Calendar
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin2=PA0
+Mcu.Pin20=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=20
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L432KCUx
 MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.CRS_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -113,6 +117,7 @@ NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -121,6 +126,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
@@ -134,8 +140,8 @@ PA0.GPIO_Label=MCO [High speed clock in]
 PA0.Locked=true
 PA0.Mode=HSE-External-Clock-Source-for-LittleOrca
 PA0.Signal=RCC_CK_IN
-PA10.Mode=I2C
-PA10.Signal=I2C1_SDA
+PA10.Mode=CRS SYNC Source GPIO
+PA10.Signal=CRS_SYNC
 PA13\ (JTMS-SWDIO).GPIOParameters=GPIO_Label
 PA13\ (JTMS-SWDIO).GPIO_Label=SWDIO
 PA13\ (JTMS-SWDIO).Locked=true
@@ -165,12 +171,16 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.Locked=true
+PA8.Signal=GPXTI8
 PA9.Mode=I2C
 PA9.Signal=I2C1_SCL
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=LD3 [Green]
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Signal=GPIO_Output
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC14-OSC32_IN\ (PC14).Locked=true
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
@@ -214,16 +224,18 @@ RCC.APB1TimFreq_Value=80000000
 RCC.APB2Freq_Value=80000000
 RCC.APB2TimFreq_Value=80000000
 RCC.CortexFreq_Value=80000000
+RCC.EnableCSSLSE=true
 RCC.FCLKCortexFreq_Value=80000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=80000000
+RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=80000000
 RCC.I2C2Freq_Value=16000000
 RCC.I2C3Freq_Value=80000000
-RCC.IPParameters=48CLKFreq_Value,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIMFreq_Value,LPUART1Freq_Value,LPUARTFreq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,WatchDogFreq_Value
+RCC.IPParameters=48CLKFreq_Value,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnableCSSLSE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIMFreq_Value,LPUART1Freq_Value,LPUARTFreq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,WatchDogFreq_Value
 RCC.LCDFreq_Value=37000
 RCC.LPTIM1Freq_Value=80000000
 RCC.LPTIM2Freq_Value=80000000
@@ -246,7 +258,8 @@ RCC.PLLSAI1QoutputFreq_Value=16000000
 RCC.PLLSAI1RoutputFreq_Value=16000000
 RCC.PWRFreq_Value=80000000
 RCC.RNGFreq_Value=16000000
-RCC.RTCFreq_Value=32000
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
+RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAI1Freq_Value=4571428.571428572
 RCC.SWPMI1Freq_Value=80000000
@@ -266,6 +279,8 @@ RTC.Date=18
 RTC.IPParameters=WeekDay,Month,Date
 RTC.Month=RTC_MONTH_MARCH
 RTC.WeekDay=RTC_WEEKDAY_THURSDAY
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=20.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
